--- a/chat/index.html
+++ b/chat/index.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 
-<h1>Welcome to the premier chat service, <div id="logo">Strife!</div></h1>
+<h1>Welcome to my chat site, Yay!</h1>
 <br>
-<h3>Our name is completly original and not a rip off of a other chat platform who we shall not name, but it starts with a D and rimes with tiscord.</h3>
+<h3>Input your message below.</h3>
+<p> Unfortunately, you have to scroll to the bottom of the site to see the most recent messages, I haven't figured out how to put them at the top.</p>
 <textarea placeholder="Input Message Here" rows="5" required="Write something here" id="Input"></textarea>
 <br>
 <button id="sendMessage">Press To Send</button>
